--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Importing Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+
+
+
+
+
+/* Animation on scroll */
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.scroll-animation {
+  opacity: 0;
+  animation: fadeInUp 1s forwards;
 }
+
+.scroll-animation-delay-1 {
+  animation-delay: 0.2s;
+}
+
+.scroll-animation-delay-2 {
+  animation-delay: 0.4s;
+}
+
+.scroll-animation-delay-3 {
+  animation-delay: 0.6s;
+}
+
+/* Testimonials section
+#testimonials .container {
+  overflow: hidden;
+}
+
+#testimonials .testimonial {
+  flex: 0 0 auto;
+}
+
+#testimonials .flex {
+  display: flex;
+  white-space: nowrap;
+  justify-content: flex-start;
+} */
+
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+
+
+
+
+
